booooh sto committando un sacco di roba

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,11 @@
 services:
-#  agent:
-#    image: ghcr.io/cheshire-cat-ai/core:latest
-#    container_name: mauro
-#    ports:
-#      - 1865:80
-#      - 5678:5678
-#    volumes:
-#      - ./volumes/static:/app/cat/static
-#      - ./volumes/plugins:/app/cat/plugins
-#      - ./volumes/data:/app/cat/data
-  mongo:
-    image: mongo:latest
-    container_name: mongo
+  agent:
+    image: ghcr.io/cheshire-cat-ai/core:latest
+    container_name: mauro
     ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
+      - 1865:80
+      - 5678:5678
     volumes:
-      - ./volumes/mongodb:/data/db
+      - ./volumes/static:/app/cat/static
+      - ./volumes/plugins:/app/cat/plugins
+      - ./volumes/data:/app/cat/data
