--- a/.gitignore
+++ b/.gitignore
@@ -279,7 +279,8 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,django,python
 
-volumes/**
+docker/volumes/**
+docker/environments/*.env
 **/.idea/**
 
 **/*_d3v.*
